--- a/speaker.css
+++ b/speaker.css
@@ -5,6 +5,24 @@
 html {
 	background-color: white;
 }
+article{
+padding: .5em 0;
+	border-top: 2px solid #800000;
+	border-bottom: 2px solid #800000;
+}
+article h2 {
+	padding-top: 0;
+}
+article h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
+}
+article img {
+	float: right;
+	max-width: 40%;
+	min-width: 150px;
+	margin: .5em 0 1em 1em;
+	border: 1px solid black;
 aside{
   float: right;
   padding: 0 0 20px 20px;
